src/css/metacatui-common.css
/* ... */
.list-only #results-container{
	width: 100%;
	overflow-y: visible;
	overflow-x: visible;
}
.list-only .map-toggle-container{
	display: none;
}
/******************************************
** Filters ***
******************************************/
.filter-container{
	width: 187px;
}
.filter-contain{
	border-bottom: 1px dashed #CCC;
	padding: 10px 0px 5px 0px;
	width: 100%;
	height: auto;
	max-height: 1.4em;
	transition: max-height .5s ease-in-out;
	-webkit-transition: max-height .5s ease-in-out;
	-moz-transition: max-height .5s ease-in-out;
  	overflow: hidden;
}
.filter-input-contain{
	clear: both;
}
.filter.btn{
	margin-bottom: 0px;
}
.filter-contain > label{
   	font-size: 13px;
   	font-weight: bold;
   	display: inline-block;
   	height: 2em;
}
.current-filters-container{
  margin-bottom: 10px;
  display: block;
  clear: both;
  border-bottom: 2px solid #DDD;
  padding-left: 10px;
  padding-right: 25px;
}
.current-filters > .current-filter,
.current-filters > .current-filter[class*="span"]{
  padding: 0px 5px 0px 5px;
  min-height: 1.5em;
  line-height: 1.5em;
  width: 100%;
  width: calc(100% - 20px);
  margin: 5px 0px;
  border-radius: 3px;
  -webkit-border-radius: 3px;
  -moz-border-radius: 3px;
  font-size: 1em;
}
.current-filters,
.current-filters[class*="span"]{
	list-style: none;
	margin-left: 0px;
	min-height: 0px;
}
.current-filter > span{
	max-width: 85%;
	max-width: calc(100% - 25px);
	overflow: hidden;
	white-space: normal;
	word-break: break-word;
	display: inline-block;
	vertical-align: middle;
}
.current-filter .category{
	font-weight: bold;
	margin-right: 5px;
}
.current-filter > .icon{
	margin-left: 5px;
}
.current-filters[data-category='resourceMap'] .current-filter .category{
	margin-right: 0px;
}
#sidebar{
  	width: 225px;
  	height: auto;
  	overflow-y: visible;
  	overflow-x: visible;
	float: left;
	clear: left;
}
.mapMode #sidebar{
	width: 215px;
	height: 700px;
	border-right: 1px solid #CCC;
	overflow-x: hidden;
	overflow-y: overlay;
	-webkit-transform: translate3d(0,0,0);
}
#sidebar > *{
  padding-left: 10px;
  padding-right: 10px;
  width: calc(100% - 20px);
}
#sidebar > .input-append{
	margin-top: 10px;
	border-bottom: 2px solid #DDD;
	padding-bottom: 16px;
}
#sidebar > .input-append > label{
	font-size: 15px;
	font-weight: bold;
}
#sidebar > .input-append .btn {
    margin-left: -6px;
}
#sidebar .tooltip-inner{
	font-size: 1.2em;
	font-weight: normal;
	max-width: 181px;
}
#all_input {
	width: 75%;
	width: calc(100% - 60px);
	margin-left: 0px;
	margin-right: -3px;
}
.filter-input-contain input.filter{
	min-width: 120px;
	margin-right: -3px;
	margin-left: 0px;
	border-radius: 5px 0px 0px 5px;
   	-webkit-border-radius: 5px 0px 0px 5px;
   	-moz-border-radius: 5px 0px 0px 5px;
   	border: 1px solid #AAAAAA;
   	border-right: 0px;
   	height: 20px;
   	width: 75%;
}
#filter-year{
	width: 90%;
}
#filter-year input[type='text']{
	max-width: 50px;
}
#sidebar .ui-helper-hidden-accessible{
	display: none;
}
.filter-autocomplete .ui-menu-item a{
	font-size: 1em;
}
.filter-autocomplete .ui-menu-item a:hover,
.filter-autocomplete .ui-menu-item a:focus{
	border: 0px;
}
#filter-year .filter-input-contain{
	margin-top: 10px;
}
/*-- Pagination and sort --*/
.sort-by{
	float: right;
}
.sort-by label {
    display: inline;
    margin-right: 5px;
    line-height: 30px;
    vertical-align: top;
}
.sort-by select{
	width: auto;
}
/*-- The filter checkboxes --*/
#includes-files label{
 	margin-right: 4px;
 	float: left;
 	font-size: 13px;
 	width: auto;
}
.filter-contain .checkbox-list {
    margin-left: 0px;
 	list-style: none;
}
.checkbox-list > li > input{
 	float: left;
 	margin-right: 10px;
 	margin-left: 3px;
}
.checkbox-list label{
 	font-size: .9em;
 	clear: both;
}
.checkbox-list .more-link,
.checkbox-list .less-link{
	font-weight: normal;
	font-size: .9em;
}
.checkbox-list .more-link  .icon,
.checkbox-list .less-link  .icon{
	margin-left: 5px;
	font-size: 1.2em;
	vertical-align: text-bottom;
  	line-height: .9em;
}
/** UI Buttonsets **/
.ui-buttonset label,
.ui-buttonset label.ui-state-active{
    float: none;
}
.ui-buttonset label#data-year-label,
.ui-buttonset label#pub-year-label{
 	margin: 0px 5px 5px 0px;
 	float: left;
 	width: auto;
}
.ui-checkboxradio-label input[type="checkbox"]{
   	display: none;
}
.ui-checkboxradio-label .icon-check-empty,
.ui-checkboxradio-label .icon-check{
	margin-right: 5px;
}
.ui-checkboxradio-label .icon{
	margin-right: 5px;
}
label.ui-state-active .icon-check-empty,
label .icon-check {
  display: none;
}
label.ui-state-active .icon-check{
	display: inline;
}
/** Filter icons **/
.filter-contain > label > .icon{
	color: #888;
	font-size: 17px;
	float: left;
	margin: 0px;
	margin-right: 8px;
}
.filter-contain .icon.more-info{
   	font-size: 14px;
   	line-height: 23px;
   	top: 5px;
   	float: left;
   	cursor: default;
}
.filter-contain .icon.expand,
.filter-contain .icon.collapse{
	margin-right: 15px;
}
#filter-year > .icon,
#includes-files > .icon{
  	margin-top: 0px;
}
.filter-contain > .icon-sitemap{
  	font-size: 18px;
}
.filter-contain > .icon-map-marker{
  	font-size: 22px;
}
.current-filters.active {
  background-color: inherit;
  border-color: inherit;
  display: inline-block;
  float: none;
}
/** For "My Packages" filter **/
.keyword-search-link,
.current-filters > li.keyword-search-link {
	display: none;
}
.keyword-search-link.active,
.current-filters > li.keyword-search-link.active{
	border-color: inherit;
	display: inline-block;
	width: auto;
}
.btn-primary[disabled], .btn-primary[disabled]:hover, .btn[disabled], .btn[disabled]:hover {
	border-color: #CCC;
	background-color:#e6e6e6;
	color: #333;
}
.btn.download[disabled], .btn-primary.download[disabled]:hover{
	min-width: 105px;
}

a.disabled {
	pointer-events: none;
}

/********* Filter Views ***********/
.filter-group .filter {
  display: inline-block;
  margin-right: 20px;
}
.filter-group .filter .btn{
	box-shadow: none;
	border-bottom-color: #ccc;
}
/* ... */

